# esercizio-note-integrative

./: .gitignore  analisi_consumi_energia.ipynb  esercizio_note_integrative_spese.ipynb  pyproject.toml  utils.py
