[tool.poetry]
name = "esercizio-note-integrative"
version = "0.1.0"
description = ""
authors = ["albertocarot1 <acaroli1990@gmail.com>"]
readme = "README.md"
packages = [{include = "esercizio_note_integrative"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.5.1"
pandas = "^1.5.2"
lxml = "^4.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
